# HesaiLidar_SDK_2.0

./: .gitignore  CMakeLists.txt  Version.h.in
driver/: hesai_lidar_sdk.hpp
libhesai/: CMakeLists.txt
libhesai/Lidar/: driver_param.h  lidar.cc
libhesai/PtcParser/include/: ptc_parser.h
libhesai/PtcParser/src/: ptc_parser.cc
libhesai/Source/src/: socket_source.cc
libhesai/UdpParser/: udp_parser.cc
libhesai/UdpParser/include/: udp_parser.h
libhesai/UdpParser/src/: general_parser.cc  udp3_2_parser.cc
libhesai/include/: auto_tick_count.h
